added buttons yeah

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
   </head>
 
   <body>
+  <button onclick="playGame()">Start Automated Demo</button>
+  <button onclick="doTurn()">Play a Turn</button>
   <body>
 </html>
