Integrate the demo branch. Added the composition.js file to make clearer the difference between update/paint.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!--
       Client code.
     -->
+    <script src="scripts/players.js" defer></script>
+    <script src="scripts/composition.js" defer></script>
+    <script src="scripts/colors.js" defer></script>
     <script src="scripts/index.js" defer></script>
     <link rel="stylesheet" type="text/css" href="style/main.css">
   </head>
