Add scripts/key_shortcuts.js to keep index.js in sync with the node version

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!--
       Client code.
     -->
+    <script src="scripts/key_shortcuts.js" defer></script>
     <script src="scripts/players.js" defer></script>
     <script src="scripts/composition.js" defer></script>
     <script src="scripts/colors.js" defer></script>
