--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="hardware/scripts/board.js" defer></script>
     <script src="hardware/scripts/hardware.js" defer></script>
     <script src="hardware/scripts/proxy.js" defer></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="hardware/style/chutesandladders/board.css">
 
     <!--
@@ -25,5 +26,13 @@
   </head>
 
   <body>
+  <!--Button for starting automated gameplay -->
+  <div class = "row">
+  <div class = "col-md-7 col-md-offset-2">
+  <button type="button" class="btn btn-info btn-lg" onclick="playAutomatedGame()">Started Automated GamePlay</button>
+  <button type="button" class="btn btn-info btn-lg" onclick="doTurn()">Play a Turn</button>
+  <button type="button" class="btn btn-danger btn-lg" onClick="window.location.reload();">Start Over</button>
+  </div>
+  </div>
   <body>
 </html>
