--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
   <button type="button" class="btn btn-danger btn-lg" onClick="window.location.reload();">Start Over</button>
   </div>
   </div>
+  <!--Game audio -->
+  <audio id="victorySound">
+    <source src="media/victory.mp3" type="audio/mpeg">
+  </audio> 
+
   <body>
 </html>
