--- a/index.html
+++ b/index.html
@@ -39,5 +39,13 @@
     <source src="media/victory.mp3" type="audio/mpeg">
   </audio> 
 
+  <audio id="chuteSound">
+    <source src="media/chute.mp3" type="audio/mpeg">
+  </audio> 
+
+    <audio id="ladderSound">
+    <source src="media/ladder.mp3" type="audio/mpeg">
+  </audio> 
+
   <body>
 </html>
