Checkers starter code not working still fixing

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!--Button for starting automated gameplay -->
     <div class = "row">
       <div class = "col-md-7 col-md-offset-2">
+        <button type="button" class="btn btn-warning btn-lg" onclick="playCheckers()">Play Checkers</button>
         <button type="button" class="btn btn-info btn-lg" onclick="doAutoplay()">Started Automated GamePlay</button>
         <button type="button" class="btn btn-info btn-lg" onclick="doTurn()">Play a Turn</button>
         <button type="button" class="btn btn-danger btn-lg" onclick="startOver()">Start Over</button>
